Added steam controller and Dualshock support in kernel

--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -8,5 +8,8 @@
     "editor.lineNumbers": "relative",
     "extensions.autoCheckUpdates": false,
     "git.autofetch": false,
-    "vim.leader": ","
+    "vim.leader": ",",
+    "[cpp]": {
+        "editor.defaultFormatter": "ms-vscode.cpptools"
+    }
 }
