--- a/.gitmodules
+++ b/.gitmodules
@@ -52,6 +52,6 @@
 [submodule ".vim/bundle/vim-devicons"]
 	path = .vim/bundle/vim-devicons
 	url = https://github.com/ryanoasis/vim-devicons
-[submodule "/home/longer/.oh-my-zsh"]
-	path = /home/longer/.oh-my-zsh
+[submodule ".oh-my-zsh"]
+	path = .oh-my-zsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
