--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -200,9 +200,9 @@ colors:
   #
   # Colors which should be used to draw the terminal cursor. If these are unset,
   # the cursor color will be the inverse of the cell color.
-  #cursor:
-  #  text: '0x000000'
-  #  cursor: '0xffffff'
+  cursor:
+    text:   '0x002b36'
+    cursor: '0x839496'
 
   # Selection colors
   #
@@ -210,8 +210,8 @@ colors:
   # background is unset, selection color will be the inverse of the cell colors.
   # If only text is unset the cell text color will remain the same.
   selection:
-    text: '0x282a36'
-    background: '0xbbc5ff'
+    text:       '0x073642'
+    background: '0x859900'
 
   # Normal colors
   normal:
