Changed bar on screen 2

--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -4,12 +4,14 @@
     "window.restoreFullscreen": true,
     "window.titleBarStyle": "custom",
     "vim.vimrc.enable": true,
-    "vim.vimrc.path": "/home/michal/.config/VSCodium/User/vimrc",
+    "vim.vimrc.path": "$HOME/.config/VSCodium/User/vimrc",
     "editor.lineNumbers": "relative",
     "extensions.autoCheckUpdates": false,
     "git.autofetch": false,
     "vim.leader": ",",
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools"
-    }
+    },
+    "editor.fontFamily": "'Hack Nerd Font', 'monospace', monospace, 'Hack Nerd Font'",
+    "editor.fontSize": 16
 }
