--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -18,11 +18,11 @@
 
 ### Display the current CPU information
 cpu_stats
-# cpu_temp
+cpu_temp
 
 ### Display the current GPU information
 gpu_stats
-# gpu_temp
+gpu_temp
 # gpu_core_clock
 # gpu_mem_clock
 
