--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule ".zsh_custom/plugins/zsh-completions"]
 	path = .zsh_custom/plugins/zsh-completions
 	url = https://github.com/zsh-users/zsh-completions.git
+[submodule ".zsh_custom/plugins/zsh-history-substring-search"]
+	path = .zsh_custom/plugins/zsh-history-substring-search
+	url = https://github.com/zsh-users/zsh-history-substring-search.git
