--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -44,7 +44,7 @@ frame_timing
 font_size=24
 
 ### Change the hud position (default is top-left)
-position=top-right
+position=top-left
 
 ### Display the current CPU load & frequency for each core
 # core_load
