--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule ".zsh_custom/themes/spaceship-prompt"]
 	path = .zsh_custom/themes/spaceship-prompt
 	url = https://github.com/denysdovhan/spaceship-prompt.git
+[submodule ".zsh_custom/plugins/zsh-vim-mode"]
+	path = .zsh_custom/plugins/zsh-vim-mode
+	url = https://github.com/softmoth/zsh-vim-mode.git
