--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,15 +1,11 @@
+
+# Created by lxqt-config-appearance (DO NOT EDIT!)
 [Settings]
-gtk-theme-name=Materia-dark
-gtk-icon-theme-name=Adwaita
-gtk-font-name=Cantarell 11
-gtk-cursor-theme-name=Breeze_Snow
-gtk-cursor-theme-size=0
-gtk-toolbar-style=GTK_TOOLBAR_BOTH
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=1
-gtk-menu-images=1
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=1
-gtk-xft-antialias=1
-gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
+gtk-theme-name = Adapta-Nokto-Eta
+gtk-icon-theme-name = Papirus-Dark
+# GTK3 ignores bold or italic attributes.
+gtk-font-name = Sans 11
+gtk-menu-images = 1
+gtk-button-images = 1
+gtk-toolbar-style = GTK_TOOLBAR_BOTH_HORIZ
+gtk-cursor-theme-name = Breeze_Snow
