Update colors to ocaenic

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -267,7 +267,7 @@ schemes:
     # Default colors
     primary:
       background: '0x1b2b34'
-      foreground: '0xd8dee9'
+      foreground: '0xffffff'
 
     # Normal colors
     normal:
@@ -278,22 +278,22 @@ schemes:
       blue:    '0x6699cc'
       magenta: '0xc594c5'
       cyan:    '0x5fb3b3'
-      white:   '0x65737e'
+      white:   '0xd8dee9'
 
     # Bright colors
     bright:
-      black:   '0x405860'
+      black:   '0x65737e'
       red:     '0xec5f67'
       green:   '0x99c794'
       yellow:  '0xfac863'
       blue:    '0x6699cc'
       magenta: '0xc594c5'
       cyan:    '0x5fb3b3'
-      white:   '0xadb5c0'
+      white:   '0xffffff'
 
-colors: *adapta
+# colors: *adapta
 # colors: *solarized
-# colors: *oceanic
+colors: *oceanic
 
 # Visual Bell
 #
