--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,3 +47,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection
 # paste using 'p'
 unbind p
 bind p paste-buffer
+
+# Set default term to xterm
+set -g default-terminal xterm-256color
+
