--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -7,5 +7,7 @@
   "python.linting.pycodestyleArgs": ["--ignore", "E501,W503"],
   "python.formatting.autopep8Args": ["--ignore", "E501"],
 
-  "explorer.icon.enableNerdfont": true
+  "explorer.icon.enableNerdfont": true,
+
+  "list.source.files.excludePatterns": ["**/*.pyc", "**/*.egg-info/*"]
 }
