--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,18 +8,10 @@ bind C-a send-prefix
 # make delay shorter
 set -sg escape-time 0
 
-
-
 #### key bindings ####
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
-
-# quickly open a new window
-bind N new-window
-
-# synchronize all panes in a window
-bind y setw synchronize-panes
 
 # pane movement shortcuts (same as vim)
 bind h select-pane -L
@@ -31,7 +23,6 @@ bind l select-pane -R
 # set -g mouse-utf8 on
 set -g mouse on
 
-
 #### copy mode : vim ####
 
 # set vi mode for copy mode
@@ -41,12 +32,9 @@ setw -g mode-keys vi
 unbind [
 bind Escape copy-mode
 
-# start selection with 'space' and copy using 'y'
+# start selection with 'v' and copy using 'y'
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
-
-# paste using 'p'
-unbind p
-bind p paste-buffer
 
 # Set default term to xterm
 set -g default-terminal xterm-256color
