Add telescope, tweaks to nvim config

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -7,6 +7,7 @@
   "python.linting.flake8Enabled": true,
   "python.linting.flake8Args": ["--ignore=E501,W503"],
   "python.formatting.autopep8Args": ["--ignore", "E501"],
+  "pydocstring.formatter": "google",
 
   "explorer.icon.enableNerdfont": true,
 
