--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,5 +37,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 
 # Set default term to xterm
-set -g default-terminal xterm-256color
+set -g default-terminal tmux-256color
+set terminal-overrides "xterm*:RGB"
+set-option -g focus-event on
 
