Shamelessly steal and modify ThePrimeagen's tmux-cht.sh script

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,3 +41,5 @@ set -g default-terminal tmux-256color
 set terminal-overrides "xterm*:RGB"
 set-option -g focus-event on
 
+# Custom
+bind-key -r i run-shell "tmux neww ~/scripts/tmux-cht.sh"
