[Desktop] Setup rounded corners and blurred background

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,6 +1,27 @@
+# Shadows
 shadow = true
-blur-background = false
 fading = true
 fade-in-step = 0.15
 fade-out-step = 0.15
-backend = "xrender"
+shadow-radius = 20
+backend = "glx"
+
+# Rounded corners with border
+corner-radius = 15
+round-borders = 1
+
+# Blur
+blur-method = "kernel";
+blur-size = 5000;
+blur-deviation = 50000;
+blur-background = true;
+blur-background-frame = true;
+blur-background-fixed = true;
+blur-kern = "5x5box";
+blur: {
+  method = "dual_kawase";
+  strength = 8;
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+}
